--- a/metadata.yaml
+++ b/metadata.yaml
@@ -48,5 +48,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'English wit and humor'
 - !lcc 'PN'
+- GITenberg
 title: Joe Miller's Jests, with Copious Additions
 url: http://www.gutenberg.org/ebooks/43326
